# just-agent-libs

./: .env.example  AGENTS.md  Cargo.toml  README.md  flake.nix
crates/just-agent/: Cargo.toml
crates/just-agent/examples/: run-agent-with-prompt.rs
crates/just-agent/examples/common/: agent.rs  sandbox.rs
crates/just-agent/src/: args.rs  compact.rs  config.rs  interactive.rs  main.rs  provider.rs  runner.rs  session.rs  types.rs
crates/just-agent/src/context/: compact.rs  mod.rs  store.rs
crates/just-agent/src/policy/: agent.rs  approval.rs  executor.rs  mod.rs
crates/just-agent/src/policy/classifier/: helpers.rs  lists.rs  tests.rs  walker.rs
crates/just-agent/src/tools/: context.rs  mod.rs
crates/just-agent/src/tui/: approval.rs  completion.rs  markdown.rs  mod.rs
crates/just-common/: Cargo.toml  README.md
crates/just-common/src/: error.rs  lib.rs  prepared.rs
crates/just-common/src/transport/: http.rs  mod.rs  sse.rs
crates/just-llm-client/: Cargo.toml  README.md
crates/just-llm-client/examples/: deepseek_simple_chat.rs  deepseek_tool_call.rs  openai_compat_factory.rs  openai_compat_registry.rs  openai_compat_simple_chat.rs  openai_compat_tool_call.rs  runtime_selected_provider.rs
crates/just-llm-client/examples/common/: mod.rs
crates/just-llm-client/src/: capability.rs  error.rs  family.rs  lib.rs
crates/just-llm-client/src/client/: deepseek.rs  factory.rs  mod.rs  openai_compat.rs  provider.rs  registry.rs
crates/just-llm-client/src/provider/: mod.rs  validation.rs
crates/just-llm-client/src/provider/deepseek/: conversions.rs  mod.rs
crates/just-llm-client/src/provider/openai_compat/: conversions.rs  mod.rs
crates/just-llm-client/src/tools/: dispatch.rs  error.rs  llm_tool.rs  mod.rs  renamed_tool.rs
crates/just-llm-client/src/tools/shell/: mod.rs
crates/just-llm-client/src/tools/shell/backend/: mod.rs  pty.rs
crates/just-llm-client/src/tools/shell/session/: capture.rs  create.rs  exec.rs  kill.rs  list.rs  restart.rs  switch.rs
crates/just-llm-client/src/types/: balance.rs  context.rs  mod.rs  model.rs  prepared.rs  token.rs
crates/just-llm-client/src/types/chat/: mod.rs  request.rs  response.rs  shared.rs
crates/just-llm-client/tests/: client_factory.rs  client_registry.rs  providers.rs
crates/providers/just-deepseek/: Cargo.toml  README.md
crates/providers/just-deepseek/examples/: chat_completion.rs  deepseek_chat_completion.rs  streaming_chat_completion.rs  thinking_mode.rs  tool_calling.rs
crates/providers/just-deepseek/src/: client.rs  client_builder.rs  config.rs  error.rs  lib.rs  stream.rs  transport.rs
crates/providers/just-deepseek/src/types/: balance.rs  mod.rs  models.rs
crates/providers/just-deepseek/src/types/chat/: mod.rs  request.rs  shared.rs
crates/providers/just-deepseek/tests/: client.rs
crates/providers/just-openai-compat/: Cargo.toml  README.md
crates/providers/just-openai-compat/examples/: openai_compat_chat_completion.rs  openai_compat_streaming_chat_completion.rs  openai_compat_tool_calling.rs  streaming_chat_completion.rs  tool_calling.rs
crates/providers/just-openai-compat/src/: client.rs  client_builder.rs  config.rs  error.rs  lib.rs  stream.rs
crates/providers/just-openai-compat/src/types/: mod.rs  models.rs
crates/providers/just-openai-compat/src/types/chat/: mod.rs  request.rs  response.rs  shared.rs
crates/providers/just-openai-compat/tests/: client.rs
docs/usage/: just-llm-client.md  provider-neutral-client.md  provider-specific-clients.md  provider-type-crates.md
nix/: checks.nix  common.nix
nix/dev/: checks.nix  shell.nix
