[workspace]
members = [
  "crates/just-llm-client",
  "crates/just-common",
  "crates/providers/just-deepseek",
  "crates/providers/just-openai-compat",
]

resolver = "3"

[workspace.package]
version = "0.1.0"
license = "MIT"

[workspace.metadata.crane]
name = "just-rs"

[workspace.dependencies]
just-common = { path = "crates/just-common" }
# Providers
just-deepseek = { path = "crates/providers/just-deepseek" }
just-openai-compat = { path = "crates/providers/just-openai-compat" }

async-trait = "0.1.89"
async-stream = "0.3.6"
dotenvy = "0.15.7"
futures-core = "0.3.32"
futures-util = "0.3.32"
reqwest = { version = "0.13.2", default-features = false, features = [
  "json",
  "rustls",
  "stream",
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.52.1", features = ["macros", "rt-multi-thread"] }
tokenx-rs = "0.1.0"
wiremock = "0.6.5"
