[package]
name = "just-agent"
description = "Minimal reference agent built on just-llm-client"
edition = "2024"
version.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
just-llm-client = { workspace = true, features = ["tools"] }
serde = { workspace = true }
serde_json = { workspace = true }
rable = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }

[dev-dependencies]
dotenvy = { workspace = true }
[[example]]

name = "run-agent-with-prompt"
