[package]
name = "just-common"
edition = "2024"
version.workspace = true
license.workspace = true

[dependencies]
async-stream = { workspace = true }
futures-core = { workspace = true }
futures-util = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
