[package]
name = "just-common"
description = "Shared HTTP transport, SSE stream parsing, and error types for the just-agent ecosystem"
readme = "README.md"
edition = "2024"
version.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords = ["sse", "http-client", "openai"]
categories = ["web-programming::http-client", "asynchronous", "parser-implementations"]

[dependencies]
async-stream = { workspace = true }
futures-core = { workspace = true }
futures-util = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
