[package]
name = "just-llm-client"
description = "Just a lightweight, composable, and minimal LLM client — not an agent framework"
readme = "README.md"
edition = "2024"
version.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords = ["llm", "ai", "agent", "harness", "lightweight"]
categories = ["api-bindings", "asynchronous", "web-programming::http-client"]

[features]
default = ["deepseek", "openai-compat"]
deepseek = ["dep:just-deepseek", "dep:tokenx-rs"]
openai-compat = ["dep:just-openai-compat", "dep:tokenx-rs"]

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
just-common = { workspace = true }
just-deepseek = { workspace = true, optional = true }
futures-core = { workspace = true }
futures-util = { workspace = true }
just-openai-compat = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokenx-rs = { workspace = true, optional = true }

[dev-dependencies]
dotenvy = { workspace = true }
tokio = { workspace = true }
wiremock = { workspace = true }

[[example]]
name = "runtime_selected_provider"
required-features = ["deepseek", "openai-compat"]

[[example]]
name = "deepseek_simple_chat"
required-features = ["deepseek"]

[[example]]
name = "openai_compat_simple_chat"
required-features = ["openai-compat"]

[[example]]
name = "openai_compat_registry"
required-features = ["openai-compat"]

[[example]]
name = "deepseek_tool_call"
required-features = ["deepseek"]

[[example]]
name = "openai_compat_tool_call"
required-features = ["openai-compat"]
