[package]
name = "just-openai-compat"
edition = "2024"
version.workspace = true
license.workspace = true

[dependencies]
async-stream = { workspace = true }
futures-core = { workspace = true }
futures-util = { workspace = true }
just-common = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
dotenvy = { workspace = true }
tokio = { workspace = true }
wiremock = { workspace = true }
