[package]
name = "just-openai-compat"
description = "Rust client for any OpenAI-compatible API"
readme = "README.md"
edition = "2024"
version.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords = ["openai", "llm", "ai", "chat", "sdk"]
categories = ["api-bindings", "web-programming::http-client", "asynchronous"]

[dependencies]
async-stream = { workspace = true }
futures-core = { workspace = true }
futures-util = { workspace = true }
just-common = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
dotenvy = { workspace = true }
tokio = { workspace = true }
wiremock = { workspace = true }
